[package]
name = "ping_squirrel"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = "0.12.1"
tokio = { version = "1.46.1", features = ["full"] }

[build-dependencies]
phf_codegen = "0.12.1"
reqwest = { version = "0.12", features = ["blocking"] }

# Release profile optimizations
[profile.release]
opt-level = 3     # Maximum optimization
lto = true        # Link-time optimization
codegen-units = 1 # Better optimization, slower compile
panic = "abort"   # Smaller binary, faster execution
strip = true      # Remove debug symbols

# Even more aggressive optimization profile
[profile.release-max]
inherits = "release"
opt-level = 3
lto = "fat"             # Full LTO across all dependencies
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false # Disable overflow checks for max speed
